--- a/Wave_Plug_US/README.me
+++ b/Wave_Plug_US/README.me
@@ -1,7 +1,7 @@
-** version [10.11] - [2024-03-18]
+** version [10.11] - [2024-03-18]**
 - optimised temperature conversion table
 - Meter Reset Command fixed
 - other minor improvements
 
-** version [10.08] - [2023-08-19]
+** version [10.08] - [2023-08-19]**
 - initial firmware release
