--- a/Wave_Pro_1/README.me
+++ b/Wave_Pro_1/README.me
@@ -1,6 +1,6 @@
-**version [11.01] - [2024-03-18]
+**version [11.01] - [2024-03-18]**
 - optimised temperature conversion table
 - other minor improvements
 
-**version [10.11] - [2023-11-15]
+**version [10.11] - [2023-11-15]**
 - initial firmware release
